snake: better makefile

--- a/snake_classic/makefile
+++ b/snake_classic/makefile
@@ -1,9 +1,9 @@
-CC=gcc
-CFLAGS=-Wall -Werror -lncurses -std=c99
+cc=gcc
+cflags=-Wall -Werror -lncurses -std=c99
+objects=snake.o graphics.o common.o utils.o main.o
 
-clean:
-	*.o
+snake: $(objects)
+	$(cc) $(cflags) $^ -o snake
 
-main: *.c *.h
-	$(CC) $(CFLAGS) $^ -o $@.o
-
+$(objects): %.o: %.c
+	$(cc) -c $(cflags) $< -o $@
