snake: log, increase difficulty
Added err 'module' to log/debug.

added functions of min and is_number

added sanity check on command line arguments

added increase difficulty dynamically

added some more comments

--- a/snake_classic/makefile
+++ b/snake_classic/makefile
@@ -1,6 +1,6 @@
 cc=gcc
 cflags=-Wall -Werror -lncurses -std=c99
-objects=snake.o graphics.o common.o utils.o main.o
+objects=snake.o graphics.o common.o utils.o err.o main.o
 
 snake: $(objects)
 	$(cc) $(cflags) $^ -o snake
