snake: bug fixes and refactoring
Bug related to draw snake

Bug related to memory leaks (wasn't capable of freeing)

--- a/snake_classic/makefile
+++ b/snake_classic/makefile
@@ -1,5 +1,5 @@
 cc=gcc
-cflags=-Wall -Werror -lncurses -std=c99
+cflags=-Wall -Werror -lncurses -std=c99 -g
 objects=snake.o graphics.o common.o utils.o err.o main.o
 
 snake: $(objects)
